--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ header {
 }
 
 .about {
-    background-color: black;
+    background: linear-gradient(black,#3a3a3a);
     padding: 100px 0 20px 0;
     text-align: center;
     box-shadow: #3a3a3a;
