--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ header {
 .slogan {
     color: #74C0FE;
     text-align: center;
-    font-size: 200%;
+    font-size: 2.5rem;
     position: absolute;
     padding-left: 20%;
     padding-right: 20%;
@@ -72,7 +72,6 @@ header {
     background-color: black;
     padding: 100px 0 20px 0;
     text-align: center;
-    box-shadow: #3a3a3a;
 }
 
 /* About Heading */
@@ -118,6 +117,10 @@ header {
     color: white;
 }
 
+.video{
+    margin-left: 10%;
+    margin-top: 5%;
+}
 /*Sign Up Section*/
 
 .signup {
@@ -130,12 +133,11 @@ header {
     text-align: center;
     padding-top: 60px;
     padding-bottom: 20px;
+    font-size: 2.5rem;
 }
 
-/* Style inputs with type="text", select elements and textareas */
-input[type=text],
-select,
-textarea {
+/* Text area size and borders */
+input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -153,21 +155,41 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-bottom: 50px;
 }
 
 /* highlights button green when hovering */
 input[type=submit]:hover {
     background-color: #45a049;
 }
+/*Contact Section*/
+.contact {
+    background-color: white;
+    width: 100%;
+    height: 200px;
+}
+
+.contact h1 {
+    font-size: 2.5rem;
+}
+
+.contact-text {
+    color: #3a3a3a;
+    text-align: left;
+    margin-left: 20%;
+    margin-right: 20%;
+}
 
 /*Footer*/
 
+/*Spacing for footer icons*/
 #socials {
     text-align: center;
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    margin-top: 5%;
 }
 
 #socials i {
