--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,11 @@ body {
     background-color: #fff;
     color: #3a3a3a;
     font-family: 'Montserrat', sans-serif;
-    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+
 
 /* Header fixed while scrolling */
 header {
@@ -30,11 +33,13 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 #logo {
     padding: 0 10px;
 }
+
 
 #navbar li {
     display: inline-block;
@@ -54,6 +59,7 @@ header {
     position: relative;
 }
 
+
 /*Text Under Hero Image*/
 .slogan {
     color: #74C0FE;
@@ -68,6 +74,7 @@ header {
     padding-top: 40px;
 }
 
+
 .about {
     background-color: black;
     padding: 100px 0 20px 0;
@@ -75,7 +82,7 @@ header {
 }
 
 /* About Heading */
-.about h1 {
+.about h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
     color: white;
@@ -117,10 +124,11 @@ header {
     color: white;
 }
 
-.video{
+.video {
     margin-left: 10%;
     margin-top: 5%;
 }
+
 /*Sign Up Section*/
 
 .signup {
@@ -136,8 +144,15 @@ header {
     font-size: 2.5rem;
 }
 
+.signup p {
+    font-size: 1.3rem;
+}
+
+
 /* Text area size and borders */
-input[type=text], select, textarea {
+input[type=text],
+select,
+textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -147,7 +162,7 @@ input[type=text], select, textarea {
     margin-bottom: 16px;
 }
 
-/* Style the submit button with a specific background color etc */
+/* Style for submit button for size and color */
 input[type=submit] {
     background-color: #74C0FE;
     color: white;
@@ -162,34 +177,46 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: #45a049;
 }
+
 /*Contact Section*/
 .contact {
     background-color: white;
     width: 100%;
     height: 200px;
+    margin-bottom: 10%;
 }
 
-.contact h1 {
+.contact h2 {
     font-size: 2.5rem;
+    text-align: center;
+}
+
+.contact li {
+    list-style: none;
+    padding: 5px;
 }
 
 .contact-text {
+    font-size: 1.3rem;
     color: #3a3a3a;
     text-align: left;
     margin-left: 20%;
     margin-right: 20%;
+    margin-bottom: 5%;
 }
 
 /*Footer*/
 
 /*Spacing for footer icons*/
+
+
+
 #socials {
     text-align: center;
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
-    margin-top: 5%;
 }
 
 #socials i {
