Add Flip cards and styles in a line using help from W3 school tutorial

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ header {
     font-size: 18px;
     padding-right: 15px;
     color: #3a3a3a;
+    font-weight: 700;
 }
 
 #hero {
@@ -129,7 +130,50 @@ header {
     margin-left: 5%;
     margin-top: 5%;
 }
-
+/*Flip Cards*/
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color: #74C0FC;
+    color: white;
+    transform: rotateY(180deg);
+  }
 /*Sign Up Section*/
 
 .signup {
@@ -332,12 +376,15 @@ input[type=submit]:hover {
         width: 100vw;
         height: auto;
     }
+
     .about-info {
         margin: 0;
     }
+
     .about h3 {
         padding-left: 32px;
     }
+
     .video {
         margin-left: 0%;
     }
