--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,12 @@ header {
     margin-top: 5%;
 }
 /*Flip Cards*/
+
+.flip {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+}
 .flip-card {
     background-color: transparent;
     width: 300px;
