--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ header {
     width: 300px;
     height: 200px;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    padding: 8px;
   }
   
   /* This container is needed to position the front and back side */
@@ -152,6 +153,7 @@ header {
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+
   }
   
   /* Do an horizontal flip when you move the mouse over the flip box container */
@@ -162,6 +164,7 @@ header {
   /* Position the front and back side */
   .flip-card-front, .flip-card-back {
     position: absolute;
+    border-radius: 2rem;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
@@ -170,8 +173,10 @@ header {
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
-    background-color: #bbb;
-    color: black;
+    background-color: #3a3a3a;
+    color: white;
+    text-align: center;
+    padding-top: 50px;
   }
   
   /* Style the back side */
@@ -179,6 +184,7 @@ header {
     background-color: #74C0FC;
     color: white;
     transform: rotateY(180deg);
+    padding-top: 40px;
   }
 /*Sign Up Section*/
 
