New @media for larger screens to fit video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,6 @@ header {
 
 .video {
     margin-left: 5%;
-    margin-top: 5%;
 }
 /*Flip Cards*/
 
@@ -136,6 +135,11 @@ header {
     background-color: white;
     display: flex;
     justify-content: center;
+}
+
+.flip-container {
+    flex-direction: row;
+    display: flex;
 }
 .flip-card {
     background-color: transparent;
@@ -353,16 +357,15 @@ input[type=submit]:hover {
     }
 
     .video {
-        margin-left: 0%;
+        margin-left: 0;
     }
 
     .about h3 {
         padding-left: 32px;
     }
-    .flip {
-        background-color: white;
-        display: flex;
-        justify-content: center;
+
+    .flip-container {
+        flex-direction: column;
     }
 }
 
@@ -405,10 +408,13 @@ input[type=submit]:hover {
     .video {
         margin-left: 0%;
     }
+    .flip-card {
+        flex: 1 1 25%;
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
+@media (min-width: 1500px) {
 
     .about-info,
     .container-su {
@@ -423,4 +429,34 @@ input[type=submit]:hover {
     nav ul li {
         margin-left: 20px;
     }
+    .video video {
+        width: 45vw;
+        height: auto;
+        padding: 0;
+        margin: 0;
+    }
+    
+}
+@media (min-width: 992px) and (max-width: 1499px) {
+    .about-info,
+    .container-su {
+        flex-direction: column;
+    }
+
+    .video video {
+        width: 100vw;
+        height: auto;
+    }
+    .about-info {
+        margin: 0;
+    }
+
+    .video {
+        padding-top: 2rem;
+        margin-left: 0;
+    }
+    .about h3 {
+        padding-left: 32px;
+    }
+
 }
