centered about section text to fit 992 - 1449 and padding to flip cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,7 @@ header {
 .flip-container {
     flex-direction: row;
     display: flex;
+    padding-top: 20px;
 }
 .flip-card {
     background-color: transparent;
@@ -457,6 +458,16 @@ input[type=submit]:hover {
     }
     .about h3 {
         padding-left: 32px;
+    }
+    .about-info p {
+        text-align: justify;
+    }
+    .about p {
+        max-width: 100%;
+    }
+
+    .about ul {
+        max-width: 100%;
     }
 
 }
