--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,6 @@ header {
 .about-info {
     margin: 2rem 2rem;
     display: flex;
-    align-items: left;
     justify-content: left;
     text-align: left;
 }
@@ -269,6 +268,17 @@ input[type=submit]:hover {
     margin-left: 20%;
     margin-right: 20%;
     margin-bottom: 5%;
+}
+
+/*Map*/
+.map-container {
+    width: 100%;
+}
+.map-container iframe {
+    width: 100%;
+    height: 250px;
+    border: 0;
+    margin: 0;
 }
 
 /*Footer*/
