--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ header {
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
-    background-color: #3a3a3a;
+    background-color: #595959;
     color: white;
     text-align: center;
     padding-top: 50px;
