--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ header {
   /* Style the back side */
   .flip-card-back {
     background-color: #74C0FC;
-    color: white;
+    color: #262626;
     transform: rotateY(180deg);
     padding-top: 40px;
   }
@@ -230,7 +230,7 @@ textarea {
 /* Style for submit button for size and color */
 input[type=submit] {
     background-color: #74C0FE;
-    color: white;
+    color: #262626;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
