--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,8 +56,9 @@ header {
 #hero {
     height: 600px;
     width: 100%;
-    background: url("../images/about.jpg") no-repeat center center/cover;
+    background: url("../images/hero.webp") no-repeat center center/cover;
     position: relative;
+    background-color: black;
 }
 
 
